src/test/ui/rfc-2093-infer-outlives/regions-enum-not-wf.stderr
error[E0309]: the parameter type `T` may not live long enough
  --> $DIR/regions-enum-not-wf.rs:17:18
   |
LL |     Ref1Variant1(RequireOutlives<'a, T>),
   |                  ^^^^^^^^^^^^^^^^^^^^^^ ...so that the type `T` will meet its required lifetime bounds
   |
help: consider adding an explicit lifetime bound...
   |
LL | enum Ref1<'a, T: 'a> {
   |                ++++

error[E0309]: the parameter type `T` may not live long enough
  --> $DIR/regions-enum-not-wf.rs:17:18
   |
LL |     Ref1Variant1(RequireOutlives<'a, T>),
   |                  ^^^^^^^^^^^^^^^^^^^^^^ ...so that the type `T` will meet its required lifetime bounds
   |
help: consider adding an explicit lifetime bound...
   |
LL | enum Ref1<'a, T: 'a> {
   |                ++++

error[E0309]: the parameter type `T` may not live long enough
  --> $DIR/regions-enum-not-wf.rs:24:25
   |
LL |     Ref2Variant2(isize, RequireOutlives<'a, T>),
   |                         ^^^^^^^^^^^^^^^^^^^^^^ ...so that the type `T` will meet its required lifetime bounds
   |
help: consider adding an explicit lifetime bound...
   |
LL | enum Ref2<'a, T: 'a> {
   |                ++++

error[E0309]: the parameter type `T` may not live long enough
  --> $DIR/regions-enum-not-wf.rs:24:25
   |
LL |     Ref2Variant2(isize, RequireOutlives<'a, T>),
   |                         ^^^^^^^^^^^^^^^^^^^^^^ ...so that the type `T` will meet its required lifetime bounds
   |
help: consider adding an explicit lifetime bound...
   |
LL | enum Ref2<'a, T: 'a> {
   |                ++++

error[E0309]: the parameter type `T` may not live long enough
  --> $DIR/regions-enum-not-wf.rs:38:1
   |
LL | / enum RefDouble<'a, 'b, T> {
LL | |
LL | |     RefDoubleVariant1(&'a RequireOutlives<'b, T>),
LL | |
LL | | }
   | |_^ ...so that the type `T` will meet its required lifetime bounds
   |
help: consider adding an explicit lifetime bound...
   |
LL | enum RefDouble<'a, 'b, T: 'b> {
   |                         ++++

error[E0309]: the parameter type `T` may not live long enough
  --> $DIR/regions-enum-not-wf.rs:40:23
   |
LL |     RefDoubleVariant1(&'a RequireOutlives<'b, T>),
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^ ...so that the type `T` will meet its required lifetime bounds
   |
help: consider adding an explicit lifetime bound...
   |
LL | enum RefDouble<'a, 'b, T: 'b> {
   |                         ++++

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0309`.
